Remove border configurability, fix text wrapping, add save, add reset

--- a/styles.css
+++ b/styles.css
@@ -256,8 +256,8 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
-    word-break: break-word;
-    padding: 15%;
+    word-break: normal;
+    padding: 8%;
     width: 100%;
     height: 100%;
     font-weight: 600;
